<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddNewBarCode" >

    <EditText
        android:id="@+id/barCodeNameField"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bar_code_name"
        android:inputType="text" />

    <Button
        android:id="@+id/scan_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:onClick="scanForBarCode"
        android:text="@string/button_scan" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scan_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:onClick="saveButtonClick"
        android:text="@string/button_save" />

</RelativeLayout>