<!-- A nie łatwiej jezeli chcesz miec to w prosty sposób byłoby uzyć relative layout?
	 twój projekt nie jest zbytnio użyteczny takie przyciski robisz na panelu bocznym albo pod przyciskiem menu
	 w twoim przypadku podstawowym widokiem będa listy zakupowe. Przemyśl to jeszcze -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <CheckedTextView
        android:id="@+id/checkedTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/main_menu_string" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:text="@string/button_browse_bar_code_data_base" 
    	android:onClick="changeBrowseBarCodeDataBase"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:text="@string/button_create_new_list_data_base" 
        android:onClick="changeCreateNewListDataBase"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="changeBrowseExistingListDataBase"
        android:text="@string/button_browse_existing_data_base" />

</RelativeLayout>